Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-25985

QWidget::grabMouse crash Application

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • None
    • 5.0.0 Beta 1
    • None
    • Windows 7 MSVC2010

    Description

      This is side effect of QtBase SHA: f6c107d799d14bbdb2cb71b8446483541bb0adb5

      Following example can be used to reproduce the crash.

      #include <QtWidgets>
      
      int main(int argc, char *argv[])
      {
          QApplication a(argc, argv);
      
          QPushButton w("Move mouse onto me");
          w.show();
      
          QPushButton btn("Grabber");
          btn.grabMouse();
          btn.show();
          
          return a.exec();
      }
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jolind Jorgen Lind
            dbzhang800 debao zhang
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes