Fix QApplicationPrivate::pickMouseReceiver() crash

When a widget associate with a QWidgetWindow received a mouse event, but
another widget which is not a child of the widget has grabbed the mouse, the
application will crash. As QWidget::mapFrom() only works when mapping from
parent to child.

This is the side effect of SHA: f6c107d799d14bbdb2cb71b8446483541bb0adb5

Task-number: QTBUG-25985
Change-Id: If2e6289e02d6d67c215694f2217221c9c7a0af46
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@digia.com>
Reviewed-by: Laszlo Agocs <laszlo.p.agocs@nokia.com>

cregit: a86efb543dc9f99fe8bb45a46f2bc6959b70770c https://github.com/qt/qtbase/commit/a86efb543dc9f99fe8bb45a46f2bc6959b70770c